--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,8 +12,8 @@
             ///<reference path="../typings/jquery/jquery.d.ts" />
 
             $(document).ready(function(){
-               
-               console.log("Referência incluida para suporte a intellisense JQUERY"); 
+               console.log("Ref teste");
+               // console.log("Referência incluida para suporte a intellisense JQUERY"); 
                 
             });
         </script>
