--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,7 +13,7 @@
 
             $(document).ready(function(){
                console.log("Ref teste");
-               // console.log("Referência incluida para suporte a intellisense JQUERY"); 
+               console.log("Referência incluida para suporte a intellisense JQUERY"); 
                 
             });
         </script>
